fixed about me description and tech stack spacing

--- a/source/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/source/assets/stylesheets/config/_bootstrap_variables.scss
@@ -10,7 +10,7 @@ $body-bg: $light-gray;
 $font-size-base: 1rem;
 
 // Colors
-$body-color: $gray;
+$body-color: $raisin-black;
 $primary: $tart-orange;
 $success: $green;
 $info: $yellow;
